--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower-Website</title>
-</head>
-<body>
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+        <section>
+            <div class="container">
+                <div class="left">
+                    <h3 class="title">Let's make beautiful flowers a part of your life.</h3>
+                    <p class="common-disc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <button class="btn-primary">Shop Now</button>
+                </div>
+
+                <div class="right-image">
+                    <img class="photo" src="./flower asset/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
 
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <section>
-        
-    </section>
-</body>
+    <section></section>
+  </body>
 </html>
