--- a/index.html
+++ b/index.html
@@ -127,5 +127,11 @@
         
       </section>
     </main>
+
+    <footer class="footer">
+        <h2 class="logo"><strong class="diff-color">Flower</strong>Shop</h2>
+        <p class="disc3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="copy-write">@2020-2023, Safin and FlowerShop.com. All rights reserved. </p>
+    </footer>
   </body>
 </html>
