new section added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-      <!-- insta -->
+      <!-- feature part -->
 
       <section class="section-1">
         <h3 class="feature-title">Our Featured Flowers</h3>
@@ -64,6 +64,33 @@
               <img class="img3" src="./flower asset/pngwing 7.png" alt="" />
               <p class="underline">Pink Flower Tree</p>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Added Part -->
+
+      <section class="section-added">
+        <div class="added-part">
+          <div class="added-left">
+            <h2 class="added-title">What We Do & What <strong class="diff-color">We Create</strong></h2>
+            <p class="added-disc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn-primary">Explore More</button>
+          </div>
+
+          <div class="added-right">
+
+            <div class="row-1">
+              <img class="added-photo" src="./flower asset/Rectangle 4.png" alt="">
+              <img class="added-photo" src="./flower asset/Rectangle 5.png" alt="">
+
+            </div>
+
+            <div class="row-2">
+              <img class="added-photo" src="./flower asset/Rectangle 6.png" alt="">
+              <img class="added-photo" src="./flower asset/Flower 01.png" alt="">
+            </div>
+
           </div>
         </div>
       </section>
