--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="right-image">
-            <img class="photo" src="./flower asset/pngwing 10.png" alt="" />
+            <img class="photo" src="./asset/png10.png" alt="flower 10" />
           </div>
         </div>
       </section>
@@ -49,19 +49,19 @@
         <div class="container-2">
           <div class="card1">
             <div class="imageC">
-              <img class="img1" src="./flower asset/pngwing 6.png" alt="" />
+              <img class="img1" src="./asset/png6.png" alt="flower 6" />
               <p class="underline">Pink Flower Tree</p>
             </div>
           </div>
           <div class="card2">
             <div class="imageC">
-              <img class="img2" src="./flower asset/pngwing 5.png" alt="" />
+              <img class="img2" src="./asset/png5.png" alt="flower 5" />
               <p class="underline2">Pink Flower Tree</p>
             </div>
           </div>
           <div class="card3">
             <div class="imageC">
-              <img class="img3" src="./flower asset/pngwing 7.png" alt="" />
+              <img class="img3" src="./asset/png7.png" alt="flower 7" />
               <p class="underline">Pink Flower Tree</p>
             </div>
           </div>
@@ -81,14 +81,14 @@
           <div class="added-right">
 
             <div class="row-1">
-              <img class="added-photo" src="./flower asset/Rectangle 4.png" alt="">
-              <img class="added-photo" src="./flower asset/Rectangle 5.png" alt="">
+              <img class="added-photo" src="./asset/rec4.png" alt="flower 4">
+              <img class="added-photo" src="./asset/rec5.png" alt="flower 5">
 
             </div>
 
             <div class="row-2">
-              <img class="added-photo" src="./flower asset/Rectangle 6.png" alt="">
-              <img class="added-photo" src="./flower asset/Flower 01.png" alt="">
+              <img class="added-photo" src="./asset/rec6.png" alt="flower 6">
+              <img class="added-photo" src="./asset/flower1.png" alt="flower 1">
             </div>
 
           </div>
@@ -110,7 +110,7 @@
             <button class="btn-primary">Sign Up</button>
           </div>
           <div class="right-side">
-            <img class="img-sale" src="./flower asset/pngwing 8.png" alt="" />
+            <img class="img-sale" src="./asset/png8.png" alt="flower8" />
           </div>
         </div>
       </section>
@@ -126,16 +126,16 @@
 
         <div class="container-4">
           <div class="card">
-            <img src="./flower asset/Flower 01.png" alt="" />
+            <img src="./asset/flower1.png" alt="flower 1" />
           </div>
           <div class="card">
-            <img src="./flower asset/Rectangle 4.png" alt="" />
+            <img src="./asset/rec4.png" alt="flower 4" />
           </div>
           <div class="card">
-            <img src="./flower asset/Rectangle 5.png" alt="" />
+            <img src="./asset/rec5.png" alt="flower 5" />
           </div>
           <div class="card">
-            <img src="./flower asset/Rectangle 6.png" alt="" />
+            <img src="./asset/rec6.png" alt="flower 6" />
           </div>
         </div>
        <section class="subsection">
